src/objects/Material_Deviation__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Search to identify #1 Code, #2 Manufacturer, and #3 Manufacturer&apos;s Part Number</inlineHelpText>
        <label>Code</label>
        <referenceTo>MCAR_MEPS__c</referenceTo>
        <relationshipLabel>Material Deviation</relationshipLabel>
        <relationshipName>Material_Deviation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_PPM__c</fullName>
        <inlineHelpText>If applicable, enter defective unit PPM</inlineHelpText>
        <label>Defect PPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Containment_Hours__c</fullName>
        <inlineHelpText>If applicable, enter the number of hours required to service this defective unit</inlineHelpText>
        <label>Expected Containment Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Number_Date_Code__c</fullName>
        <inlineHelpText>If applicable, add the lot information.</inlineHelpText>
        <label>Lot Number / Date Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Claim_Management1__c</fullName>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>Material Deviation</relationshipLabel>
        <relationshipName>Material_Deviation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MCARs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MCARs</label>
        <referenceTo>MCAR__c</referenceTo>
        <relationshipLabel>Material Deviation</relationshipLabel>
        <relationshipName>Material_Deviation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mfg_Part_Number__c</fullName>
        <formula>Code__r.MCAR_Mfg_Part_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mfg. Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <inlineHelpText>Please add any other details regarding this case.</inlineHelpText>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Please add the quantity of defective units for this Code.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <inlineHelpText>If applicable, add serial number or other ID information</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codee__c</fullName>
        <label>codee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Material Deviation</label>
    <nameField>
        <displayFormat>MDNo-{00000}</displayFormat>
        <label>Material Deviation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Deviation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>